Name:           thundermint
Version:        0.1
Synopsis:       Haskell reimplementation of tendermint protocol
Description:
  Haskell reimplementation of tendermint protocol

Cabal-Version:  >= 1.10
License:        AllRightsReserved
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Homepage:       https://github.com/hexresearch/thundermint
Category:       Data
Build-Type:     Simple

Library
  Ghc-options:         -Wall
  Default-Language:    Haskell2010
  Build-Depends:       base              >=4.9 && <5
                     , async             >=2.2.1
                     , aeson
                     , bytestring        >=0.10
                     , base58-bytestring >=0.1
                     , containers        >=0.5.9
                     , data-default-class
                     , directory
                     , deepseq           >=1.4
                     , filepath
                     , exceptions        >= 0.8.3
                     , memory            >=0.14.14
                     , random
                     , retry             >= 0.7.6.2
                     , stm               >=2.4
                     , serialise         >=0.2
                     , sqlite-simple
                     , text
                     , transformers      >=0.5
                     , unordered-containers >=0.2.5.0
                     --
                     , network           >=2.6.0.0
                     , katip             >=0.5.4.0
                     , cryptonite        >=0.25
                     --
                     , groom
                     --
                     , tasty       >=0.11
                     , tasty-hunit >=0.10

  Exposed-modules:
                  Thundermint.Blockchain.App
                  Thundermint.Blockchain.Interpretation
                  Thundermint.Blockchain.Types
                  Thundermint.Consensus.Algorithm
                  Thundermint.Consensus.Types
                  Thundermint.Control
                  Thundermint.Crypto
                  Thundermint.Crypto.Containers
                  Thundermint.Crypto.Ed25519
                  Thundermint.Crypto.Swear
                  Thundermint.Debug.Trace
                  Thundermint.Logger
                  Thundermint.Mock
                  Thundermint.Mock.Coin
                  Thundermint.Mock.KeyList
                  Thundermint.Mock.KeyVal
                  Thundermint.P2P
                  Thundermint.P2P.Instances
                  Thundermint.P2P.Internal
                  Thundermint.P2P.Network
                  Thundermint.P2P.PeerState
                  Thundermint.Store
                  Thundermint.Store.SQLite
                  Thundermint.Store.STM

-- Example programs
Executable thundermint-keyval
  Ghc-options:         -Wall
  Default-Language:    Haskell2010
  Build-Depends:       base       >=4.9 && <5
                     , thundermint
                     , bytestring >=0.10
                     , containers >=0.5.7
                     , groom
  hs-source-dirs:      exe
  Main-is:             key-val.hs

Executable thundermint-keyval-sql
  Ghc-options:         -Wall
  Default-Language:    Haskell2010
  Build-Depends:       base       >=4.9 && <5
                     , thundermint
                     , bytestring        >=0.10
                     , base58-bytestring >=0.1
                     , containers        >=0.5.7
                     , groom
  hs-source-dirs:      exe
  Main-is:             key-val-sql.hs

Executable thundermint-simple-network
  Ghc-options:         -Wall -threaded
  Default-Language:    Haskell2010
  Build-Depends:       base       >=4.9 && <5
                     , thundermint
                     , bytestring >=0.10
                     , base58-bytestring >=0.1
                     , containers >=0.5.7
                     , network    >=2.6.0.0
  hs-source-dirs:      exe
  Main-is:             network.hs

Executable thundermint-node
  Ghc-options:         -Wall -threaded -Wno-orphans
  Default-Language:    Haskell2010
  Build-Depends:       base       >=4.9 && <5
                     , thundermint
                     , aeson
                     , bytestring >=0.10
                     , base58-bytestring >=0.1
                     , containers >=0.5.7
                     , network    >=2.6.0.0
                     , text
  hs-source-dirs:      exe
  Main-is:             node.hs

Executable thundermint-coin
  Ghc-options:         -Wall -threaded -Wno-orphans
  Default-Language:    Haskell2010
  Build-Depends:       base       >=4.9 && <5
                     , thundermint
                     , exceptions
                     , bytestring >=0.10
                     , base58-bytestring >=0.1
                     , containers >=0.5.7
                     , aeson
                     , stm
                     , serialise
                     , filepath
                     , directory
                     , optparse-applicative >= 0.14
                     , random
                     , async
                     , text
  hs-source-dirs:      exe
  Main-is:             coin.hs


Executable thundermint-coin-db
  Ghc-options:         -Wall -threaded -Wno-orphans
  Default-Language:    Haskell2010
  Build-Depends:       base       >=4.9 && <5
                     , thundermint
                     , bytestring >=0.10
                     , base58-bytestring >=0.1
                     , containers >=0.5.7
                     , aeson
                     , stm
                     , serialise
                     , filepath
                     , directory
                     , optparse-applicative >= 0.14
                     , text
  hs-source-dirs:      exe
  Main-is:             coin-db.hs


-- Test suite
Test-suite thundermint-tests
  Type:                exitcode-stdio-1.0
  Ghc-options:         -Wall -threaded -rtsopts "-with-rtsopts=-N"
  Default-Language:    Haskell2010
  Build-Depends:       base       >=4.9 && <5
                     , thundermint
                     , bytestring >=0.10
                     , containers
                     , exceptions
                     , stm        >=2.4
                     , async      >=2.2.1
                     --
                     , network           >=2.7.0.0
                     , random
                     , serialise         >=0.2
                     , katip
                     --
                     , QuickCheck
                     , bytestring-arbitrary
                     , generic-arbitrary
                     , hedgehog
                     -- NB: ^ troubles with 'allow newer'
                     , hedgehog-quickcheck
                     , tasty             >=0.11
                     , tasty-hedgehog
                     , tasty-hunit       >=0.10
  hs-source-dirs:      test
  Main-is:             Main.hs
  Other-modules:       TM.Arbitrary.Instances
                       TM.MockNet
                       TM.Network
                       TM.P2P
                       TM.RealNetwork
                       TM.Serialisation
                       TM.Util.Misc
                       TM.Util.Network
                       TM.Util.Tests

-- Benchmarks
Benchmark thundermint-bench
  Type:                exitcode-stdio-1.0
  Ghc-options:         -threaded -O2 -Wall
  hs-source-dirs:      bench
  Default-Language:    Haskell2010
  Main-is:             main.hs
  Build-Depends:       base  >=4.9 && <5
                     , bytestring >=0.10
                     , criterion
                     , cryptonite
                     , deepseq
                     , thundermint
