Name:           thundermint
Version:        0.1
Synopsis:       Haskell reimplementation of tendermint protocol
Description:
  Haskell reimplementation of tendermint protocol

Cabal-Version:  >= 1.10
License:        AllRightsReserved
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Homepage:       https://github.com/hexresearch/thundermint
Category:       Data
Build-Type:     Simple

Library
  Ghc-options:         -Wall
  Default-Language:    Haskell2010
  Build-Depends:       base              >=4.9 && <5
                     , aeson
                     , async             >=2.2.1
                     , base58-bytestring >=0.1
                     , bytestring        >=0.10
                     , containers        >=0.5.9
                     , data-default-class
                     , deepseq           >=1.4
                     , directory
                     , exceptions        >=0.8.3
                     , filepath
                     , groom
                     , memory            >=0.14.14
                     , network-info
                     , random
                     , random-shuffle
                     , retry             >=0.7.6.2
                     , serialise         >=0.2
                     , sqlite-simple
                     , stm               >=2.4
                     , text
                     , transformers      >=0.5
                     , unordered-containers >=0.2.5.0
                     --
                     , cprng-aes
                     , cryptonite         >=0.25
                     , katip              >=0.5.4.0
                     , network            >=2.6.0.0 && <2.8
                     , tls                >=1.4.1
                     , x509
                     , x509-store
                     , x509-system
                     , x509-validation
                     --
                     -- , tasty       >=0.11
                     -- , tasty-hunit >=0.10

  Exposed-modules:
                  Thundermint.Blockchain.App
                  Thundermint.Blockchain.Interpretation
                  Thundermint.Blockchain.Types
                  Thundermint.Consensus.Algorithm
                  Thundermint.Consensus.Types
                  Thundermint.Control
                  Thundermint.Crypto
                  Thundermint.Crypto.Containers
                  Thundermint.Crypto.Ed25519
                  Thundermint.Crypto.Swear
                  Thundermint.Debug.Trace
                  Thundermint.Logger
                  Thundermint.Mock
                  Thundermint.Mock.Coin
                  Thundermint.Mock.KeyList
                  Thundermint.Mock.KeyVal
                  Thundermint.Mock.Store
                  Thundermint.Mock.Types
                  Thundermint.P2P
                  Thundermint.P2P.Consts
                  Thundermint.P2P.Instances
                  Thundermint.P2P.Network
                  Thundermint.P2P.PeerState
                  Thundermint.P2P.Types
                  Thundermint.Store
                  Thundermint.Store.SQLite
                  Thundermint.Store.STM
                  Thundermint.Utils
  Other-modules:
                  Thundermint.P2P.Network.Parameters
                  Thundermint.P2P.Network.TLS
                  Thundermint.P2P.Network.IpAddresses

-- Example programs
Executable thundermint-keyval
  Ghc-options:         -Wall
  Default-Language:    Haskell2010
  Build-Depends:       base       >=4.9 && <5
                     , thundermint
                     , aeson
                     , bytestring >=0.10
                     , containers >=0.5.7
                     , exceptions
                     , filepath
                     , groom
                     , optparse-applicative
  hs-source-dirs:      exe
  Main-is:             key-val.hs

Executable thundermint-simple-network
  Ghc-options:         -Wall -threaded
  Default-Language:    Haskell2010
  Build-Depends:       base       >=4.9 && <5
                     , thundermint
                     , bytestring >=0.10
                     , base58-bytestring >=0.1
                     , containers >=0.5.7
                     , data-default-class
                     , network    >=2.6.0.0
  hs-source-dirs:      exe
  Main-is:             network.hs

Executable thundermint-node
  Ghc-options:         -Wall -threaded -Wno-orphans
  Default-Language:    Haskell2010
  Build-Depends:       base       >=4.9 && <5
                     , thundermint
                     , aeson
                     , bytestring >=0.10
                     , base58-bytestring >=0.1
                     , containers >=0.5.7
                     , data-default-class
                     , network    >=2.6.0.0
                     , text
  hs-source-dirs:      exe
  Main-is:             node.hs

Executable thundermint-coin
  Ghc-options:         -Wall -threaded -Wno-orphans
  Default-Language:    Haskell2010
  Build-Depends:       base       >=4.9 && <5
                     , thundermint
                     , aeson
                     , async
                     , base58-bytestring    >=0.1
                     , bytestring           >=0.10
                     , containers           >=0.5.7
                     , directory
                     , exceptions
                     , filepath
                     , optparse-applicative >= 0.14
                     , random
                     , serialise
                     , stm
                     , text
  hs-source-dirs:      exe
  Main-is:             coin.hs

Executable thundermint-coin-node
  Ghc-options:         -Wall -threaded -Wno-orphans
  Default-Language:    Haskell2010
  Build-Depends:       base                 >=4.9 && <5
                     , thundermint
                     , aeson
                     , async
                     , base58-bytestring    >=0.1
                     , bytestring           >=0.10
                     , containers           >=0.5.7
                     , data-default-class
                     , directory
                     , exceptions
                     , filepath
                     , katip                >=0.5.4.0
                     , network              >=2.6.0.0
                     , network-simple       >=0.4.2
                     , optparse-applicative >=0.14
                     , random
                     , serialise
                     , stm
                     , text
  hs-source-dirs:      exe
  Main-is:             coin-node.hs


Executable thundermint-tls-coin-node
  Ghc-options:         -Wall -threaded -Wno-orphans
  Default-Language:    Haskell2010
  Build-Depends:       base                 >=4.9 && <5
                     , thundermint
                     , aeson
                     , async
                     , base58-bytestring    >=0.1
                     , bytestring           >=0.10
                     , containers           >=0.5.7
                     , data-default-class
                     , directory
                     , exceptions
                     , filepath
                     , katip                >=0.5.4.0
                     , network              >=2.6.0.0
                     , network-simple       >=0.4.2
                     , optparse-applicative >=0.14
                     , random
                     , serialise
                     , stm
                     , text
  hs-source-dirs:      exe
  Main-is:             tls-coin-node.hs

Executable thundermint-coin-db
  Ghc-options:         -Wall -threaded -Wno-orphans
  Default-Language:    Haskell2010
  Build-Depends:       base                 >=4.9 && <5
                     , thundermint
                     , aeson
                     , base58-bytestring    >=0.1
                     , bytestring           >=0.10
                     , containers           >=0.5.7
                     , directory
                     , filepath
                     , optparse-applicative >=0.14
                     , serialise
                     , stm
                     , text
  hs-source-dirs:      exe
  Main-is:             coin-db.hs


-- Test suite
Test-suite thundermint-tests
  Type:                exitcode-stdio-1.0
  Ghc-options:         -Wall -threaded -rtsopts "-with-rtsopts=-N"
  Default-Language:    Haskell2010
  Build-Depends:       base              >=4.9 && <5
                     , thundermint
                     , aeson
                     , async             >=2.2.1
                     , bytestring        >=0.10
                     , containers
                     , data-default-class
                     , directory
                     , exceptions
                     , katip
                     , network
                     , random
                     , serialise         >=0.2
                     , stm               >=2.4
                     , tls               >=1.4.1
                     --
                     , QuickCheck
                     , bytestring-arbitrary
                     , generic-arbitrary
                     , hedgehog
                     , hedgehog-quickcheck
                     , tasty             >=0.11
                     , tasty-hedgehog
                     , tasty-hunit       >=0.10
  hs-source-dirs:      test
  Main-is:             Main.hs
  Other-modules:       TM.Arbitrary.Instances
                       TM.Crypto
                       TM.MockNet
                       TM.Network
                       TM.NetworkTls
                       TM.P2P
                       TM.RealNetwork
                       TM.Serialisation
                       TM.Store
                       TM.Util.Network
                       TM.Util.Tests

-- Benchmarks
Benchmark thundermint-bench
  Type:                exitcode-stdio-1.0
  Ghc-options:         -threaded -O2 -Wall
  hs-source-dirs:      bench
  Default-Language:    Haskell2010
  Main-is:             main.hs
  Build-Depends:       base  >=4.9 && <5
                     , thundermint
                     , bytestring >=0.10
                     , criterion
                     , cryptonite
                     , deepseq
