Name:           hschain-ML
Version:        0.1
Synopsis:       Abstract network API for hschain
Description:
  This package provide abstraction over network for messge passing

Cabal-Version:  >= 1.10
License:        MIT
License-File:   LICENSE
Author:         Serguey Zefirov <sergueyz@gmail.com>
Maintainer:     Serguey Zefirov <sergueyz@gmail.com>
Homepage:
Category:       Machine-learning
Build-Type:     Simple

Library
  Ghc-options:         -Wall
  Default-Language:    Haskell2010
  Build-Depends:       base               >=4.9 && <5
                     --
                     , mtl
                     , random
                     , vector
  Exposed-modules:
                  ML.NES
  Other-modules:


-- Test suite
Test-suite hschain-net-tests
  Type:                exitcode-stdio-1.0
  Ghc-options:         -Wall -threaded -rtsopts "-with-rtsopts=-N -qn1"
  Default-Language:    Haskell2010
  Build-Depends:       base              >=4.9 && <5
                     , hschain-net
                     --
                     , aeson
                     , async             >=2.2.1
                     , bytestring        >=0.10
                     , exceptions
                     , network
                     , random
                     , serialise         >=0.2
                     , retry             >=0.7.6.2
                     , QuickCheck
                     , tasty             >=0.11
                     , tasty-quickcheck
                     , tasty-hunit       >=0.10
  hs-source-dirs:      test
  Main-is:             Main.hs
  Other-modules:       TM.Network
                       TM.RealNetwork
                       TM.Serialisation
